# PPGprox

./: .gitattributes  .gitignore  CMakeLists.txt  Kconfig  README.md  mcuboot.conf  prj.conf  proximity.overlay  usb_cdc.overlay
boards/arm/adafruit_feather_nrf52840_sense/: Kconfig  Kconfig.board  Kconfig.defconfig  adafruit_feather_nrf52840_sense-pinctrl.dtsi  adafruit_feather_nrf52840_sense-sensors.dtsi  adafruit_feather_nrf52840_sense.dts  adafruit_feather_nrf52840_sense.yaml  adafruit_feather_nrf52840_sense_defconfig
boards/arm/adafruit_feather_nrf52840_sense/doc/: index.rst
data/: recording-10-52-11-04-2023.txt  recording-23-00-20-03-2023.txt  recording-23-22-19-03-2023.txt
docs/: diagram.drawio  serialplot.ini
scripts/: benchmark_comparison.py  iir_filter_design.py  plot_hexdump.py  ppg_analysis.ipynb  requirements.txt  sine_wave_gen.py
src/: Application.cpp  Application.hpp  Benchmark.hpp  BenchmarkDSP.cpp  Color.cpp  Color.hpp  CycleCounter.hpp  DataCollector.cpp  DataCollector.hpp  Device.cpp  Device.hpp  Fft.hpp  HrProcessor.hpp  IFilter.hpp  IIRFilter.hpp  ITransform.hpp  MovingAverageFilter.hpp  Neopixel.cpp  Neopixel.hpp  PpgProcessor.cpp  PpgProcessor.hpp  Proximity.cpp  Proximity.hpp  Serial.cpp  Serial.hpp  Timer.cpp  Timer.hpp  Vcnl4040.cpp  Vcnl4040.hpp  Ws2812b.cpp  Ws2812b.hpp  main.cpp
